tests/golden/parse_errors/for_missing_block.err
Parse error at 1:33: expected `{` after for clauses, found Print `print`
  for let i = 0; i < 3; i = i + 1 print i;
                                  ^
